[gd_scene load_steps=4 format=3 uid="uid://8elwbdmldgdi"]

[ext_resource type="Script" path="res://script/end.gd" id="1_wnnxw"]
[ext_resource type="Texture2D" uid="uid://i0xuqlbj5cy5" path="res://assets/tiles/game_over_background.jpg" id="2_nocet"]
[ext_resource type="FontFile" uid="uid://sgvfhvecop85" path="res://assets/font/insaniburger/Insanibu.ttf" id="3_k3vn6"]

[node name="End" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wnnxw")

[node name="background" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 307.0
offset_right = -279.861
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_nocet")
expand_mode = 3

[node name="Victory" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -176.0
offset_top = 50.0
offset_right = 294.0
offset_bottom = 107.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.403199, 0.575324, 0.184514, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_k3vn6")
theme_override_font_sizes/font_size = 50
text = "Victoire"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -150.0
offset_right = 251.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2

[node name="Stats" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_k3vn6")
theme_override_font_sizes/font_size = 25
text = "Stats"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Projejectile" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Projectile" type="Label" parent="VBoxContainer/Projejectile"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_k3vn6")
text = "Burgers vendus: "

[node name="Projectil_value" type="Label" parent="VBoxContainer/Projejectile"]
clip_contents = true
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_k3vn6")
text = "0"
horizontal_alignment = 1

[node name="Money" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Money" type="Label" parent="VBoxContainer/Money"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_k3vn6")
text = "Diabètes provoqués  : "

[node name="Money_value" type="Label" parent="VBoxContainer/Money"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_k3vn6")
text = "0"
horizontal_alignment = 1

[node name="Dead" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Dead" type="Label" parent="VBoxContainer/Dead"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_k3vn6")
text = "Populace sustentée : "

[node name="Dead_value" type="Label" parent="VBoxContainer/Dead"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_k3vn6")
text = "0"
horizontal_alignment = 1

[node name="Lecon1" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.403922, 0.576471, 0.184314, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_k3vn6")
theme_override_font_sizes/font_size = 22
text = "

Bravo, mais à quel prix ?
"
horizontal_alignment = 1

[node name="Lecon" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_k3vn6")
text = "
La malbouffe et la surconsommation entraînent chaque année des millions de cas de diabète et de maladies cardiovasculaires. Plus de 140 000 personnes meurent chaque année de crises cardiaques en France. Ton succès ici est peut-être un échec pour ta santé. Fais attention à ce que tu consommes !"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -144.0
offset_top = -56.0
offset_right = -34.0
offset_bottom = -25.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_k3vn6")
text = "Retour Menu"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
